fix: Исправлен случай, когда один и тот же пользователь учитывался дважды